--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 60,
    "metadata": {
     "tags": []
    },
@@ -539,20 +539,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Binary Search Tree: 0.000254 seconds\n",
-      "Sequential Search: 0.000263 seconds\n",
-      "Balanced Search Tree: 0.000223 seconds\n",
+      "Sequential Search: 0.000903 seconds\n",
+      "Binary Search Tree: 0.000944 seconds\n",
+      "Balanced Search Tree: 0.001655 seconds\n",
       "\n",
       "\n",
-      "Binary Search Tree size: 48 bytes\n",
-      "Sequential Search size: 48 bytes\n",
-      "Balanced Search Tree size: 48 bytes\n"
+      "Sequential Search size: 32 bytes\n",
+      "Binary Search Tree size: 32 bytes\n",
+      "Balanced Search Tree size: 32 bytes\n"
      ]
     }
    ],
    "source": [
     "import timeit\n",
-    "import sys\n",
+    "# import sys\n",
     "\n",
     "# ADD YOUR TEST CODE HERE TO WORK ON SYNTHETIC DATA\n",
     "\n",
@@ -566,7 +566,8 @@
     "start = timeit.default_timer()\n",
     "for value in data:\n",
     "    ss.insertElement(value)\n",
-    "ss_space = sys.getsizeof(ss)\n",
+    "# ss_space = sys.getsizeof(ss)\n",
+    "ss_space = ss.__sizeof__()\n",
     "for value in data:\n",
     "    ss.searchElement(value)\n",
     "ss_time = timeit.default_timer() - start\n",
@@ -576,7 +577,8 @@
     "start = timeit.default_timer()\n",
     "for value in data:\n",
     "    bst.insertElement(value)\n",
-    "bst_space = sys.getsizeof(bst)\n",
+    "# bst_space = sys.getsizeof(bst)\n",
+    "bst_space = bst.__sizeof__()\n",
     "for value in data:\n",
     "    bst.searchElement(value)\n",
     "bst_time = timeit.default_timer() - start\n",
@@ -586,7 +588,8 @@
     "start = timeit.default_timer()\n",
     "for value in data:\n",
     "    avl.insertElement(value)\n",
-    "avl_space = sys.getsizeof(avl)\n",
+    "# avl_space = sys.getsizeof(avl)\n",
+    "avl_space = bst.__sizeof__()\n",
     "for value in data:\n",
     "    avl.searchElement(value)\n",
     "avl_time = timeit.default_timer() - start\n",
@@ -596,7 +599,8 @@
     "# start = timeit.default_timer()\n",
     "# for value in data:\n",
     "#     bf.insertElement(str(value))\n",
-    "# bf_space = sys.getsizeof(bf)\n",
+    "# # bf_space = sys.getsizeof(bf)\n",
+    "# bf_space = bf.__sizeof__()\n",
     "# for value in data:\n",
     "#     bf.searchElement(str(value))\n",
     "# bf_time = timeit.default_timer() - start\n",
