moved hashfunction up to the second cell
moved from bloomfilter

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,17 @@
     "        self.left = None\n",
     "        self.right = None\n",
     "        self.top = None\n",
-    "        self.color = \"red\""
+    "        self.color = \"red\"\n",
+    "\n",
+    "# Helper Function for hashmap\n",
+    "def hashFunction(self, string):\n",
+    "    hash_values = []\n",
+    "    hash1 = hash(string)\n",
+    "    hash2 = hash(str(hash1) + string)\n",
+    "    for i in range(self.hash_count):\n",
+    "        value = (hash1 + i * hash2) % self.size\n",
+    "        hash_values.append(value)\n",
+    "    return hash_values"
    ]
   },
   {
@@ -327,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,18 +348,7 @@
     "        self.size = size\n",
     "        self.hash_count = has_count\n",
     "        self.bit_array = [0] * size\n",
-    "        pass           \n",
     "    \n",
-    "    def hashFunction(self, string):\n",
-    "        hash_values = []\n",
-    "        hash1 = hash(string)\n",
-    "        hash2 = hash(str(hash1) + string)\n",
-    "        for i in range(self.hash_count):\n",
-    "            value = (hash1 + i * hash2) % self.size\n",
-    "            hash_values.append(value)\n",
-    "        return hash_values\n",
-    "    \n",
-    "        \n",
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
     "        # ADD YOUR CODE HERE\n",
