clean the codes and add bloom filter time and space check into both real data and synthetic data codes and remove what we don't want

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -84,13 +84,17 @@
    "source": [
     "# ADD AUXILIARY DATA STRUCTURE DEFINITIONS AND HELPER CODE HERE\n",
     "\n",
+    "# Data structure definitions for Binary Search Tree\n",
     "class TreeNode_BinarySearchTree():\n",
+    "    \n",
     "    def __init__(self, value):\n",
     "        self.value = value\n",
     "        self.left = None\n",
     "        self.right = None\n",
     "\n",
+    "# Data structure definitions for Balanced Search Tree\n",
     "class TreeNode_BalancedSearchTree():\n",
+    "    \n",
     "    def __init__(self, value):\n",
     "        self.value = value\n",
     "        self.left = None\n",
@@ -123,6 +127,7 @@
    "outputs": [],
    "source": [
     "class SequentialSearchSet(AbstractSet):\n",
+    "    \n",
     "    def __init__(self):\n",
     "        # ADD YOUR CODE HERE\n",
     "        self.data = []        \n",
@@ -137,7 +142,6 @@
     "            self.data.sort()\n",
     "            inserted = True\n",
     "            return inserted\n",
-    "          \n",
     "\n",
     "    def searchElement(self, element):     \n",
     "        found = False\n",
@@ -163,6 +167,7 @@
    "outputs": [],
    "source": [
     "class BinarySearchTreeSet(AbstractSet):\n",
+    "    \n",
     "    def __init__(self):\n",
     "        self.root = None\n",
     "        \n",
@@ -229,13 +234,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class BalancedSearchTreeSet():\n",
+    "class BalancedSearchTreeSet(AbstractSet):\n",
     "    \n",
     "    def __init__(self):\n",
     "        self.root = None       \n",
-    "     \n",
-    "    \n",
-    "        \n",
+    "\n",
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
     "        if self.root is None:\n",
@@ -358,7 +361,6 @@
     "        \n",
     "        inserted = True\n",
     "        return inserted\n",
-    "    \n",
     "\n",
     "    def searchElement(self, element):\n",
     "        found = True\n",
@@ -388,7 +390,7 @@
     "import random\n",
     "\n",
     "class TestDataGenerator(AbstractTestDataGenerator):\n",
-    "    \n",
+    "\n",
     "    def __init__(self):\n",
     "        # ADD YOUR CODE HERE\n",
     "        pass           \n",
@@ -5888,7 +5890,6 @@
     "\n",
     "file_list = [\"test-search.txt\",\"test1-mobydick.txt\",\"test2-warpeace.txt\",\"test3-dickens.txt\"]\n",
     "for file in file_list:\n",
-    "    print(\"\\n\")\n",
     "    print(file)\n",
     "    all_words = []\n",
     "    with open(r\"testfiles\\\\\"+file, \"r\", encoding=\"utf-8\") as current_file:\n",
@@ -5962,7 +5963,29 @@
     "            bal_tot_search_time += (bal_search_end_time - bal_search_start_time)\n",
     "        bal_av_search_time = bal_tot_search_time / (iteration + 1)\n",
     "        bal_search_time_data.append(bal_av_search_time)\n",
-    "    current_file.close()\n",
+    "    \n",
+    "    bf = BloomFilterSet()\n",
+    "    bf_insert_time_data = []\n",
+    "    bf_search_time_data = []\n",
+    "    bf_space_data = []\n",
+    "    for iteration in range(num_data):\n",
+    "        bf_insert_start_time = timeit.default_timer()\n",
+    "        bf.insertElement(all_words[iteration])\n",
+    "        bf_insert_end_time = timeit.default_timer()\n",
+    "        bf_insert_time = bf_insert_end_time - bf_insert_start_time\n",
+    "        bf_insert_time_data.append(bf_insert_time)\n",
+    "        bf_space = bal.__sizeof__()\n",
+    "        bf_space_data.append(bal_space)\n",
+    "        bf_tot_search_time = 0\n",
+    "        for id in range(iteration + 1):\n",
+    "            value = all_words[id]\n",
+    "            bf_search_start_time = timeit.default_timer()\n",
+    "            bf.searchElement(value)\n",
+    "            bf_search_end_time = timeit.default_timer()\n",
+    "            bf_tot_search_time += (bf_search_end_time - bf_search_start_time)\n",
+    "        bf_av_search_time = bf_tot_search_time / (iteration + 1)\n",
+    "        bf_search_time_data.append(bf_av_search_time)\n",
+    "    \n",
     "    for num_data_have in range(num_data):\n",
     "        print(f\"When there are {num_data_have + 1} elements\")\n",
     "        print(f\"Sequential Search insert time: {ss_insert_time_data[num_data_have]:.6f} seconds\")\n",
@@ -5973,121 +5996,12 @@
     "        print(f\"Binary Search Tree space: {bst_space_data[num_data_have]} bytes\")\n",
     "        print(f\"Balanced Search Tree insert time: {bal_insert_time_data[num_data_have]:.6f} seconds\")\n",
     "        print(f\"Balanced Search Tree search time: {bal_search_time_data[num_data_have]:.6f} seconds\")\n",
-    "        print(f\"Balanced Search Tree space: {bal_space_data[num_data_have]} bytes\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test-search.txt: \n",
-      "Sequential Search: 0.000036 seconds\n",
-      "Binary Search Tree: 0.000026 seconds\n",
-      "Balanced Search Tree: 0.000022 seconds\n",
-      "Sequential Search: 32 bytes\n",
-      "Binary Search Tree: 32 bytes\n",
-      "Balanced Search Tree: 32 bytes\n",
-      "\n",
-      "\n",
-      "test1-mobydick.txt: \n",
-      "Sequential Search: 0.000023 seconds\n",
-      "Binary Search Tree: 0.000013 seconds\n",
-      "Balanced Search Tree: 0.000012 seconds\n",
-      "Sequential Search: 32 bytes\n",
-      "Binary Search Tree: 32 bytes\n",
-      "Balanced Search Tree: 32 bytes\n",
-      "\n",
-      "\n",
-      "test2-warpeace.txt: \n",
-      "Sequential Search: 0.000024 seconds\n",
-      "Binary Search Tree: 0.000012 seconds\n",
-      "Balanced Search Tree: 0.000012 seconds\n",
-      "Sequential Search: 32 bytes\n",
-      "Binary Search Tree: 32 bytes\n",
-      "Balanced Search Tree: 32 bytes\n",
-      "\n",
-      "\n",
-      "test3-dickens.txt: \n",
-      "Sequential Search: 0.000022 seconds\n",
-      "Binary Search Tree: 0.000013 seconds\n",
-      "Balanced Search Tree: 0.000012 seconds\n",
-      "Sequential Search: 32 bytes\n",
-      "Binary Search Tree: 32 bytes\n",
-      "Balanced Search Tree: 32 bytes\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "import timeit\n",
-    "\n",
-    "file_list = [\"test-search.txt\",\"test1-mobydick.txt\",\"test2-warpeace.txt\",\"test3-dickens.txt\"]\n",
-    "for file in file_list:\n",
-    "    current_file = open(r\"testfiles\\\\\"+file, \"r\", encoding=\"utf-8\")\n",
-    "    for line in current_file:\n",
-    "        for word in line.split(\" \"):\n",
-    "            continue\n",
+    "        print(f\"Balanced Search Tree space: {bal_space_data[num_data_have]} bytes\")\n",
+    "        print(f\"Bloom Filter insert time: {bf_insert_time_data[num_data_have]:.6f} seconds\")\n",
+    "        print(f\"Bloom Filter search time: {bf_search_time_data[num_data_have]:.6f} seconds\")\n",
+    "        print(f\"Bloom Filter space: {bf_space_data[num_data_have]} bytes\")\n",
     "    \n",
-    "    ss = SequentialSearchSet()\n",
-    "    start = timeit.default_timer()\n",
-    "    for line in current_file:\n",
-    "        for word in line.split(\" \"):\n",
-    "            ss.insertElement(word)\n",
-    "    ss_space = ss.__sizeof__()\n",
-    "    for line in current_file:\n",
-    "        for word in line.split(\" \"):\n",
-    "            ss.searchElement(word)\n",
-    "    ss_time = timeit.default_timer() - start\n",
-    "\n",
-    "    bst = BinarySearchTreeSet()\n",
-    "    start = timeit.default_timer()\n",
-    "    for line in current_file:\n",
-    "        for word in line.split(\" \"):\n",
-    "            bst.insertElement(word)\n",
-    "    bst_space = bst.__sizeof__()\n",
-    "    for line in current_file:\n",
-    "        for word in line.split(\" \"):\n",
-    "            bst.searchElement(word)\n",
-    "    bst_time = timeit.default_timer() - start\n",
-    "\n",
-    "    blt = BalancedSearchTreeSet()\n",
-    "    start = timeit.default_timer()\n",
-    "    for line in current_file:\n",
-    "        for word in line.split(\" \"):\n",
-    "            blt.insertElement(word)\n",
-    "    blt_space = blt.__sizeof__()\n",
-    "    for line in current_file:\n",
-    "        for word in line.split(\" \"):\n",
-    "            blt.searchElement(word)\n",
-    "    blt_time = timeit.default_timer() - start\n",
-    "\n",
-    "    # bf = BloomFilterSet()\n",
-    "    # start = timeit.default_timer()\n",
-    "    # for line in current_file:\n",
-    "    #     for word in line.split(\" \"):\n",
-    "    #         bf.insertElement(word)\n",
-    "    # bf_space = bf.__sizeof__()\n",
-    "    # for line in current_file:\n",
-    "    #     for word in line.split(\" \"):\n",
-    "    #         bf.searchElement(word)\n",
-    "    # bf_time = timeit.default_timer() - start\n",
     "    current_file.close()\n",
-    "    \n",
-    "    print(file+\": \")\n",
-    "    print(f\"Sequential Search: {ss_time:.6f} seconds\")\n",
-    "    print(f\"Binary Search Tree: {bst_time:.6f} seconds\")\n",
-    "    print(f\"Balanced Search Tree: {blt_time:.6f} seconds\")\n",
-    "    # print(f\"Bloom Filter: {bf_time:.6f} seconds\")\n",
-    "    print(f\"Sequential Search: {ss_space} bytes\")\n",
-    "    print(f\"Binary Search Tree: {bst_space} bytes\")\n",
-    "    print(f\"Balanced Search Tree: {blt_space} bytes\")\n",
-    "    # print(f\"Bloom Filter: {bf_space} bytes\")\n",
     "    print(\"\\n\")"
    ]
   },
@@ -6184,109 +6098,28 @@
     "    bal_av_search_time = bal_tot_search_time / (iteration + 1)\n",
     "    bal_search_time_data.append(bal_av_search_time)\n",
     "\n",
-    "for num_data_have in range(num_data):\n",
-    "    print(f\"When there are {num_data_have + 1} elements\")\n",
-    "    print(f\"Sequential Search insert time: {ss_insert_time_data[num_data_have]:.6f} seconds\")\n",
-    "    print(f\"Sequential Search search time: {ss_search_time_data[num_data_have]:.6f} seconds\")\n",
-    "    print(f\"Sequential Search space: {ss_space_data[num_data_have]} bytes\")\n",
-    "    print(f\"Binary Search Tree insert time: {bst_insert_time_data[num_data_have]:.6f} seconds\")\n",
-    "    print(f\"Binary Search Tree search time: {bst_search_time_data[num_data_have]:.6f} seconds\")\n",
-    "    print(f\"Binary Search Tree space: {bst_space_data[num_data_have]} bytes\")\n",
-    "    print(f\"Balanced Search Tree insert time: {bal_insert_time_data[num_data_have]:.6f} seconds\")\n",
-    "    print(f\"Balanced Search Tree search time: {bal_search_time_data[num_data_have]:.6f} seconds\")\n",
-    "    print(f\"Balanced Search Tree space: {bal_space_data[num_data_have]} bytes\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[32], line 37\u001b[0m\n\u001b[0;32m     35\u001b[0m start \u001b[39m=\u001b[39m timeit\u001b[39m.\u001b[39mdefault_timer()\n\u001b[0;32m     36\u001b[0m \u001b[39mfor\u001b[39;00m value \u001b[39min\u001b[39;00m data:\n\u001b[1;32m---> 37\u001b[0m     avl\u001b[39m.\u001b[39;49minsertElement(value)\n\u001b[0;32m     38\u001b[0m \u001b[39m# avl_space = sys.getsizeof(avl)\u001b[39;00m\n\u001b[0;32m     39\u001b[0m avl_space \u001b[39m=\u001b[39m bst\u001b[39m.\u001b[39m__sizeof__()\n",
-      "Cell \u001b[1;32mIn[27], line 19\u001b[0m, in \u001b[0;36mBalancedSearchTreeSet.insertElement\u001b[1;34m(self, element)\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[39mif\u001b[39;00m currentNode\u001b[39m.\u001b[39mvalue \u001b[39m==\u001b[39m element:\n\u001b[0;32m     18\u001b[0m     \u001b[39mreturn\u001b[39;00m inserted\n\u001b[1;32m---> 19\u001b[0m \u001b[39melif\u001b[39;00m currentNode\u001b[39m.\u001b[39;49mvalue \u001b[39m>\u001b[39;49m element:\n\u001b[0;32m     20\u001b[0m     \u001b[39mif\u001b[39;00m currentNode\u001b[39m.\u001b[39mleft \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m     21\u001b[0m         currentNode\u001b[39m.\u001b[39mleft \u001b[39m=\u001b[39m TreeNode_BalancedSearchTree(element)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "import timeit\n",
-    "# import sys\n",
+    "bf = BloomFilterSet()\n",
+    "bf_insert_time_data = []\n",
+    "bf_search_time_data = []\n",
+    "bf_space_data = []\n",
+    "for iteration in range(num_data):\n",
+    "    bf_insert_start_time = timeit.default_timer()\n",
+    "    bf.insertElement(all_words[iteration])\n",
+    "    bf_insert_end_time = timeit.default_timer()\n",
+    "    bf_insert_time = bf_insert_end_time - bf_insert_start_time\n",
+    "    bf_insert_time_data.append(bf_insert_time)\n",
+    "    bf_space = bal.__sizeof__()\n",
+    "    bf_space_data.append(bal_space)\n",
+    "    bf_tot_search_time = 0\n",
+    "    for id in range(iteration + 1):\n",
+    "        value = all_words[id]\n",
+    "        bf_search_start_time = timeit.default_timer()\n",
+    "        bf.searchElement(value)\n",
+    "        bf_search_end_time = timeit.default_timer()\n",
+    "        bf_tot_search_time += (bf_search_end_time - bf_search_start_time)\n",
+    "    bf_av_search_time = bf_tot_search_time / (iteration + 1)\n",
+    "    bf_search_time_data.append(bf_av_search_time)\n",
     "\n",
-    "# ADD YOUR TEST CODE HERE TO WORK ON SYNTHETIC DATA\n",
-    "\n",
-    "# Create an object of class TestDataGenerator and use the object to generateData\n",
-    "SyntheticTest = TestDataGenerator()\n",
-    "data = SyntheticTest.generateData(10)\n",
-    "\n",
-    "# Sequential Search\n",
-    "ss = SequentialSearchSet()\n",
-    "random.shuffle(data)\n",
-    "start = timeit.default_timer()\n",
-    "for value in data:\n",
-    "    ss.insertElement(value)\n",
-    "# ss_space = sys.getsizeof(ss)\n",
-    "ss_space = ss.__sizeof__()\n",
-    "for value in data:\n",
-    "    ss.searchElement(value)\n",
-    "ss_time = timeit.default_timer() - start\n",
-    "\n",
-    "# Binary Search tree\n",
-    "bst = BinarySearchTreeSet()\n",
-    "start = timeit.default_timer()\n",
-    "for value in data:\n",
-    "    bst.insertElement(value)\n",
-    "# bst_space = sys.getsizeof(bst)\n",
-    "bst_space = bst.__sizeof__()\n",
-    "for value in data:\n",
-    "    bst.searchElement(value)\n",
-    "bst_time = timeit.default_timer() - start\n",
-    "\n",
-    "# Balanced Search Tree\n",
-    "avl = BalancedSearchTreeSet()\n",
-    "start = timeit.default_timer()\n",
-    "for value in data:\n",
-    "    avl.insertElement(value)\n",
-    "# avl_space = sys.getsizeof(avl)\n",
-    "avl_space = bst.__sizeof__()\n",
-    "for value in data:\n",
-    "    avl.searchElement(value)\n",
-    "avl_time = timeit.default_timer() - start\n",
-    "\n",
-    "# # Bloom Filter \n",
-    "# bf = BloomFilterSet()\n",
-    "# start = timeit.default_timer()\n",
-    "# for value in data:\n",
-    "#     bf.insertElement(str(value))\n",
-    "# # bf_space = sys.getsizeof(bf)\n",
-    "# bf_space = bf.__sizeof__()\n",
-    "# for value in data:\n",
-    "#     bf.searchElement(str(value))\n",
-    "# bf_time = timeit.default_timer() - start\n",
-    "\n",
-    "# Time taken for each algorithm to insert the data and then search for the data\n",
-    "print(f\"Sequential Search: {ss_time:.6f} seconds\")\n",
-    "print(f\"Binary Search Tree: {bst_time:.6f} seconds\")\n",
-    "print(f\"Balanced Search Tree: {avl_time:.6f} seconds\")\n",
-    "# print(f\"Bloom Filter: {bf_time:.6f} seconds\")\n",
-    "\n",
-    "print(\"\\n\")\n",
-    "\n",
-    "# Space used by each algorithm\n",
-    "print(f\"Sequential Search size: {ss_space} bytes\")\n",
-    "print(f\"Binary Search Tree size: {bst_space} bytes\")\n",
-    "print(f\"Balanced Search Tree size: {avl_space} bytes\")\n",
-    "# print(f\"Bloom Filter size: {bf_space} bytes\")\n",
-    "\n",
-    "    \n",
     "#-------------------------- Accuracy test for bloom filter-----------------------#\n",
     "\n",
     "# Data for the bloom filter\n",
@@ -6309,7 +6142,23 @@
     "#         if bf.searchElement(str(i)):\n",
     "#             false_positives += 1\n",
     "\n",
-    "# print(f\"False positives: {false_positives}\") "
+    "# print(f\"False positives: {false_positives}\") \n",
+    "\n",
+    "# Print results\n",
+    "for num_data_have in range(num_data):\n",
+    "    print(f\"When there are {num_data_have + 1} elements\")\n",
+    "    print(f\"Sequential Search insert time: {ss_insert_time_data[num_data_have]:.6f} seconds\")\n",
+    "    print(f\"Sequential Search search time: {ss_search_time_data[num_data_have]:.6f} seconds\")\n",
+    "    print(f\"Sequential Search space: {ss_space_data[num_data_have]} bytes\")\n",
+    "    print(f\"Binary Search Tree insert time: {bst_insert_time_data[num_data_have]:.6f} seconds\")\n",
+    "    print(f\"Binary Search Tree search time: {bst_search_time_data[num_data_have]:.6f} seconds\")\n",
+    "    print(f\"Binary Search Tree space: {bst_space_data[num_data_have]} bytes\")\n",
+    "    print(f\"Balanced Search Tree insert time: {bal_insert_time_data[num_data_have]:.6f} seconds\")\n",
+    "    print(f\"Balanced Search Tree search time: {bal_search_time_data[num_data_have]:.6f} seconds\")\n",
+    "    print(f\"Balanced Search Tree space: {bal_space_data[num_data_have]} bytes\")\n",
+    "    print(f\"Bloom Filter insert time: {bf_insert_time_data[num_data_have]:.6f} seconds\")\n",
+    "    print(f\"Bloom Filter search time: {bf_search_time_data[num_data_have]:.6f} seconds\")\n",
+    "    print(f\"Bloom Filter space: {bf_space_data[num_data_have]} bytes\")"
    ]
   }
  ],
