--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,30 +562,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'size' is not defined",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pyplot'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 76\u001b[0m\n\u001b[0;32m     73\u001b[0m     bal_av_search_time \u001b[39m=\u001b[39m bal_tot_search_time \u001b[39m/\u001b[39m (iteration \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[0;32m     74\u001b[0m     bal_search_time_data\u001b[39m.\u001b[39mappend(bal_av_search_time)\n\u001b[1;32m---> 76\u001b[0m bf \u001b[39m=\u001b[39m BloomFilterSet()\n\u001b[0;32m     77\u001b[0m bf_insert_time_data \u001b[39m=\u001b[39m []\n\u001b[0;32m     78\u001b[0m bf_search_time_data \u001b[39m=\u001b[39m []\n",
-      "Cell \u001b[1;32mIn[6], line 5\u001b[0m, in \u001b[0;36mBloomFilterSet.__init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m      4\u001b[0m     \u001b[39m# ADD YOUR CODE HERE\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msize \u001b[39m=\u001b[39m size\n\u001b[0;32m      6\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhash_count \u001b[39m=\u001b[39m has_count\n\u001b[0;32m      7\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbit_array \u001b[39m=\u001b[39m [\u001b[39m0\u001b[39m] \u001b[39m*\u001b[39m size\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'size' is not defined"
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Giuli\\UCL CS Year 1\\COMP0005\\Algorithm-Coursework\\SetMembership.ipynb Cell 18\u001b[0m in \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Giuli/UCL%20CS%20Year%201/COMP0005/Algorithm-Coursework/SetMembership.ipynb#Y105sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtimeit\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Giuli/UCL%20CS%20Year%201/COMP0005/Algorithm-Coursework/SetMembership.ipynb#Y105sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Giuli/UCL%20CS%20Year%201/COMP0005/Algorithm-Coursework/SetMembership.ipynb#Y105sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Giuli/UCL%20CS%20Year%201/COMP0005/Algorithm-Coursework/SetMembership.ipynb#Y105sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# ADD YOUR TEST CODE HERE TO WORK ON SYNTHETIC DATA\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Giuli/UCL%20CS%20Year%201/COMP0005/Algorithm-Coursework/SetMembership.ipynb#Y105sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Giuli/UCL%20CS%20Year%201/COMP0005/Algorithm-Coursework/SetMembership.ipynb#Y105sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# Create an object of class TestDataGenerator and use the object to generateData\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Giuli/UCL%20CS%20Year%201/COMP0005/Algorithm-Coursework/SetMembership.ipynb#Y105sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m SyntheticTest \u001b[39m=\u001b[39m TestDataGenerator()\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pyplot'"
      ]
     }
    ],
    "source": [
     "import timeit\n",
-    "\n",
+    "import numpy as np\n",
+    "import pyplot as plt\n",
     "# ADD YOUR TEST CODE HERE TO WORK ON SYNTHETIC DATA\n",
     "\n",
     "# Create an object of class TestDataGenerator and use the object to generateData\n",
     "SyntheticTest = TestDataGenerator()\n",
-    "num_data = 10\n",
+    "num_data = 1000\n",
     "data = SyntheticTest.generateData(num_data)\n",
     "\n",
     "ss = SequentialSearchSet()\n",
@@ -632,49 +632,49 @@
     "    bst_av_search_time = bst_tot_search_time / (iteration + 1)\n",
     "    bst_search_time_data.append(bst_av_search_time)\n",
     "\n",
-    "bal = BalancedSearchTreeSet()\n",
-    "bal_insert_time_data = []\n",
-    "bal_search_time_data = []\n",
-    "bal_space_data = []\n",
-    "for iteration in range(len(data)):\n",
-    "    bal_insert_start_time = timeit.default_timer()\n",
-    "    bal.insertElement(data[iteration])\n",
-    "    bal_insert_end_time = timeit.default_timer()\n",
-    "    bal_insert_time = bal_insert_end_time - bal_insert_start_time\n",
-    "    bal_insert_time_data.append(bal_insert_time)\n",
-    "    bal_space = bal.__sizeof__()\n",
-    "    bal_space_data.append(bal_space)\n",
-    "    bal_tot_search_time = 0\n",
-    "    for id in range(iteration + 1):\n",
-    "        value = data[id]\n",
-    "        bal_search_start_time = timeit.default_timer()\n",
-    "        bal.searchElement(value)\n",
-    "        bal_search_end_time = timeit.default_timer()\n",
-    "        bal_tot_search_time += (bal_search_end_time - bal_search_start_time)\n",
-    "    bal_av_search_time = bal_tot_search_time / (iteration + 1)\n",
-    "    bal_search_time_data.append(bal_av_search_time)\n",
+    "# bal = BalancedSearchTreeSet()\n",
+    "# bal_insert_time_data = []\n",
+    "# bal_search_time_data = []\n",
+    "# bal_space_data = []\n",
+    "# for iteration in range(len(data)):\n",
+    "#     bal_insert_start_time = timeit.default_timer()\n",
+    "#     bal.insertElement(data[iteration])\n",
+    "#     bal_insert_end_time = timeit.default_timer()\n",
+    "#     bal_insert_time = bal_insert_end_time - bal_insert_start_time\n",
+    "#     bal_insert_time_data.append(bal_insert_time)\n",
+    "#     bal_space = bal.__sizeof__()\n",
+    "#     bal_space_data.append(bal_space)\n",
+    "#     bal_tot_search_time = 0\n",
+    "#     for id in range(iteration + 1):\n",
+    "#         value = data[id]\n",
+    "#         bal_search_start_time = timeit.default_timer()\n",
+    "#         bal.searchElement(value)\n",
+    "#         bal_search_end_time = timeit.default_timer()\n",
+    "#         bal_tot_search_time += (bal_search_end_time - bal_search_start_time)\n",
+    "#     bal_av_search_time = bal_tot_search_time / (iteration + 1)\n",
+    "#     bal_search_time_data.append(bal_av_search_time)\n",
     "\n",
-    "bf = BloomFilterSet()\n",
-    "bf_insert_time_data = []\n",
-    "bf_search_time_data = []\n",
-    "bf_space_data = []\n",
-    "for iteration in range(num_data):\n",
-    "    bf_insert_start_time = timeit.default_timer()\n",
-    "    bf.insertElement(all_words[iteration])\n",
-    "    bf_insert_end_time = timeit.default_timer()\n",
-    "    bf_insert_time = bf_insert_end_time - bf_insert_start_time\n",
-    "    bf_insert_time_data.append(bf_insert_time)\n",
-    "    bf_space = bal.__sizeof__()\n",
-    "    bf_space_data.append(bal_space)\n",
-    "    bf_tot_search_time = 0\n",
-    "    for id in range(iteration + 1):\n",
-    "        value = all_words[id]\n",
-    "        bf_search_start_time = timeit.default_timer()\n",
-    "        bf.searchElement(value)\n",
-    "        bf_search_end_time = timeit.default_timer()\n",
-    "        bf_tot_search_time += (bf_search_end_time - bf_search_start_time)\n",
-    "    bf_av_search_time = bf_tot_search_time / (iteration + 1)\n",
-    "    bf_search_time_data.append(bf_av_search_time)\n",
+    "# bf = BloomFilterSet()\n",
+    "# bf_insert_time_data = []\n",
+    "# bf_search_time_data = []\n",
+    "# bf_space_data = []\n",
+    "# for iteration in range(num_data):\n",
+    "#     bf_insert_start_time = timeit.default_timer()\n",
+    "#     bf.insertElement(all_words[iteration])\n",
+    "#     bf_insert_end_time = timeit.default_timer()\n",
+    "#     bf_insert_time = bf_insert_end_time - bf_insert_start_time\n",
+    "#     bf_insert_time_data.append(bf_insert_time)\n",
+    "#     bf_space = bal.__sizeof__()\n",
+    "#     bf_space_data.append(bal_space)\n",
+    "#     bf_tot_search_time = 0\n",
+    "#     for id in range(iteration + 1):\n",
+    "#         value = all_words[id]\n",
+    "#         bf_search_start_time = timeit.default_timer()\n",
+    "#         bf.searchElement(value)\n",
+    "#         bf_search_end_time = timeit.default_timer()\n",
+    "#         bf_tot_search_time += (bf_search_end_time - bf_search_start_time)\n",
+    "#     bf_av_search_time = bf_tot_search_time / (iteration + 1)\n",
+    "#     bf_search_time_data.append(bf_av_search_time)\n",
     "\n",
     "#-------------------------- Accuracy test for bloom filter-----------------------#\n",
     "\n",
@@ -714,7 +714,14 @@
     "    print(f\"Balanced Search Tree space: {bal_space_data[num_data_have]} bytes\")\n",
     "    print(f\"Bloom Filter insert time: {bf_insert_time_data[num_data_have]:.6f} seconds\")\n",
     "    print(f\"Bloom Filter search time: {bf_search_time_data[num_data_have]:.6f} seconds\")\n",
-    "    print(f\"Bloom Filter space: {bf_space_data[num_data_have]} bytes\")"
+    "    print(f\"Bloom Filter space: {bf_space_data[num_data_have]} bytes\")\n",
+    "\n",
+    "#-------------------------- Plot-----------------------#\n",
+    "x = np.arrange(1, 1000)\n",
+    "plt.title(\"SS Insert Time\")\n",
+    "plt.xlabel(\"Size\")\n",
+    "plt.ylabel(\"Insert Time\")\n",
+    "plt.plot(x, ss_insert_time_data)"
    ]
   }
  ],
