--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -106,7 +106,15 @@
     "    for i in range(self.hash_count):\n",
     "        value = (hash1 + i * hash2) % self.size\n",
     "        hash_values.append(value)\n",
-    "    return hash_values"
+    "    return hash_values\n",
+    "\n",
+    "# Helper Function to calculate false postives in bloom filter\n",
+    "def falsePositiveRate(self, test_dataset):\n",
+    "    false_positives = 0\n",
+    "    for element in test_dataset:\n",
+    "        if self.searchElement(element):\n",
+    "            false_positives += 1\n",
+    "    return false_positives / len(test_dataset)"
    ]
   },
   {
@@ -341,14 +349,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "\n",
     "class BloomFilterSet(AbstractSet):\n",
     "    \n",
-    "    def __init__(self):\n",
+    "    def __init__(self, num_elements, false_pos_rate):\n",
     "        # ADD YOUR CODE HERE\n",
-    "        self.size = size\n",
-    "        self.hash_count = has_count\n",
-    "        self.bit_array = [0] * size\n",
+    "        self.size, self.hash_count = self.calculate_bloom_filter_params(num_elements, false_pos_rate)\n",
+    "        self.bit_array = [0] * self.size\n",
     "    \n",
+    "    \n",
+    "    def calculate_bloom_filter_params(self, num_elements, false_pos_rate):\n",
+    "        size = - (num_elements * math.log(false_pos_rate)) / (math.log(2)**2)\n",
+    "        hash_count = (size / num_elements) * math.log(2)\n",
+    "        return int(size), int(hash_count)\n",
+    "\n",
+    "\n",
     "    def insertElement(self, element):\n",
     "        inserted = False\n",
     "        # ADD YOUR CODE HERE\n",
