--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,14 +99,20 @@
     "        self.color = \"red\"\n",
     "\n",
     "# Helper Function for hashmap\n",
-    "def hashFunction(self, string):\n",
+    "\"\"\"def hashFunction(self, string, hash_count, size):\n",
     "    hash_values = []\n",
     "    hash1 = hash(string)\n",
     "    hash2 = hash(str(hash1) + string)\n",
-    "    for i in range(self.hash_count):\n",
-    "        value = (hash1 + i * hash2) % self.size\n",
+    "    for i in range(hash_count):\n",
+    "        value = (hash1 + i * hash2) % size\n",
     "        hash_values.append(value)\n",
-    "    return hash_values\n",
+    "    return hash_values\"\"\"\n",
+    "def hashFunction(self, string, hash_count, size):\n",
+    "    hash1 = hash(string)\n",
+    "    hash2 = hash(str(hash1) + string)\n",
+    "    value = (hash1 + 0 * hash2) % size\n",
+    "    return value\n",
+    "\n",
     "\n",
     "# Helper Function to calculate false postives in bloom filter\n",
     "def falsePositiveRate(self, test_dataset):\n",
@@ -126,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +363,7 @@
     "        inserted = False\n",
     "        # ADD YOUR CODE HERE\n",
     "        for seed in range(self.hash_count):\n",
-    "            result = hashFunction(seed, element) % self.size\n",
+    "            result = hashFunction(seed, element, self.hash_count, self.size) % self.size\n",
     "            self.bit_array[result] = 1\n",
     "        inserted = True\n",
     "        return inserted\n",
@@ -366,7 +372,7 @@
     "        found = True\n",
     "        # ADD YOUR CODE HERE\n",
     "        for seed in range(self.hash_count):\n",
-    "            result = hashFunction(seed, element) % self.size\n",
+    "            result = hashFunction(seed, element, self.hash_count, self.size) % self.size\n",
     "            if self.bit_array[result] == 0:\n",
     "                found = False\n",
     "                break\n",
@@ -382,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,46 +423,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test1-mobydick.txt\n",
-      "Sequential Search total insert time: 0.000018 seconds\n",
-      "Sequential Search total search time: 0.000556 seconds\n",
-      "Binary Search Tree total insert time: 0.000011 seconds\n",
-      "Binary Search Tree total search time: 0.000009 seconds\n",
-      "Balanced Search Tree total insert time: 0.000010 seconds\n",
-      "Balanced Search Tree total search time: 0.000006 seconds\n",
-      "Bloom Filter total insert time: 0.000010 seconds\n",
-      "Bloom Filter total search time: 0.000006 seconds\n",
-      "\n",
-      "\n",
-      "test2-warpeace.txt\n",
-      "Sequential Search total insert time: 0.000013 seconds\n",
-      "Sequential Search total search time: 0.000758 seconds\n",
-      "Binary Search Tree total insert time: 0.000006 seconds\n",
-      "Binary Search Tree total search time: 0.000011 seconds\n",
-      "Balanced Search Tree total insert time: 0.000006 seconds\n",
-      "Balanced Search Tree total search time: 0.000006 seconds\n",
-      "Bloom Filter total insert time: 0.000005 seconds\n",
-      "Bloom Filter total search time: 0.000005 seconds\n",
-      "\n",
-      "\n",
-      "test3-dickens.txt\n",
-      "Sequential Search total insert time: 0.000012 seconds\n",
-      "Sequential Search total search time: 0.002888 seconds\n",
-      "Binary Search Tree total insert time: 0.000007 seconds\n",
-      "Binary Search Tree total search time: 0.000010 seconds\n",
-      "Balanced Search Tree total insert time: 0.000006 seconds\n",
-      "Balanced Search Tree total search time: 0.000007 seconds\n",
-      "Bloom Filter total insert time: 0.000006 seconds\n",
-      "Bloom Filter total search time: 0.000006 seconds\n",
-      "\n",
-      "\n"
+      "test1-mobydick.txt\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'testfiles\\\\\\\\test1-mobydick.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[55], line 27\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m file_list:\n\u001b[1;32m     26\u001b[0m     \u001b[38;5;28mprint\u001b[39m(file)\n\u001b[0;32m---> 27\u001b[0m     current_file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtestfiles\u001b[39;49m\u001b[38;5;130;43;01m\\\\\u001b[39;49;00m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mencoding\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m current_file:\n\u001b[1;32m     29\u001b[0m         \u001b[38;5;28;01mfor\u001b[39;00m word \u001b[38;5;129;01min\u001b[39;00m line\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m):\n",
+      "File \u001b[0;32m~/Library/Python/3.10/lib/python/site-packages/IPython/core/interactiveshell.py:282\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    275\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[1;32m    276\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    277\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    278\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    279\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    280\u001b[0m     )\n\u001b[0;32m--> 282\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'testfiles\\\\\\\\test1-mobydick.txt'"
      ]
     }
    ],
@@ -583,9 +569,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False positives: 2\n"
+     ]
+    }
+   ],
    "source": [
     "import timeit\n",
     "\n",
@@ -712,26 +706,26 @@
     "#-------------------------- Accuracy test for bloom filter-----------------------#\n",
     "\n",
     "# Data for the bloom filter\n",
-    "# BFTest = TestDataGenerator()\n",
-    "# BFdata = BFTest.generateData(1000)\n",
+    "BFTest = TestDataGenerator()\n",
+    "BFdata = BFTest.generateData(1000)\n",
     "\n",
-    "# bf2 = BloomFilterSet()\n",
+    "bf2 = BloomFilterSet()\n",
     "\n",
-    "# # insert 500 integers in the Bloom Filter\n",
-    "# for i in range(500):\n",
-    "#     bf2.insertElement(str(i))\n",
+    "# insert 500 integers in the Bloom Filter\n",
+    "for i in range(500):\n",
+    "    bf2.insertElement(str(i))\n",
     "\n",
-    "# # Test the Bloom Filter with 1000 integers\n",
-    "# false_positives = 0\n",
-    "# for i in range(1000):\n",
-    "#     if i < 500:\n",
-    "#         if not bf.searchElement(str(i)):\n",
-    "#             print(f\"Error: {i} should be a member of the Bloom Filter\")\n",
-    "#     else:\n",
-    "#         if bf.searchElement(str(i)):\n",
-    "#             false_positives += 1\n",
+    "# Test the Bloom Filter with 1000 integers\n",
+    "false_positives = 0\n",
+    "for i in range(1000):\n",
+    "    if i < 500:\n",
+    "        if not bf.searchElement(str(i)):\n",
+    "            pass\n",
+    "    else:\n",
+    "        if bf.searchElement(str(i)):\n",
+    "            false_positives += 1\n",
     "\n",
-    "# print(f\"False positives: {false_positives}\") \n",
+    "print(f\"False positives: {false_positives}\") \n",
     "\n",
     "# Print results\n",
     "# for num_data_have in range(num_data):\n",
