remove space obtain in test code with synthetic data

--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,15 +600,12 @@
     "ss_insert_time_data_for_synthetic = []\n",
     "ss_average_search_time_data_for_synthetic = []\n",
     "ss_worst_search_time_data_for_synthetic = []\n",
-    "ss_space_data_for_synthetic = []\n",
     "for iteration in range(len(data)):\n",
     "    ss_insert_start_time = timeit.default_timer()\n",
     "    ss.insertElement(data[iteration])\n",
     "    ss_insert_end_time = timeit.default_timer()\n",
     "    ss_insert_time = ss_insert_end_time - ss_insert_start_time\n",
     "    ss_insert_time_data_for_synthetic.append(ss_insert_time)\n",
-    "    ss_space = ss.__sizeof__()\n",
-    "    ss_space_data_for_synthetic.append(ss_space)\n",
     "    ss_worst_search_time = 0\n",
     "    ss_tot_search_time = 0\n",
     "    for id in range(iteration + 1):\n",
@@ -629,15 +626,12 @@
     "bst_insert_time_data_for_synthetic = []\n",
     "bst_average_search_time_data_for_synthetic = []\n",
     "bst_worst_search_time_data_for_synthetic = []\n",
-    "bst_space_data_for_synthetic = []\n",
     "for iteration in range(len(data)):\n",
     "    bst_insert_start_time = timeit.default_timer()\n",
     "    bst.insertElement(data[iteration])\n",
     "    bst_insert_end_time = timeit.default_timer()\n",
     "    bst_insert_time = bst_insert_end_time - bst_insert_start_time\n",
     "    bst_insert_time_data_for_synthetic.append(bst_insert_time)\n",
-    "    bst_space = bst.__sizeof__()\n",
-    "    bst_space_data_for_synthetic.append(bst_space)\n",
     "    bst_worst_search_time = 0\n",
     "    bst_tot_search_time = 0\n",
     "    for id in range(iteration + 1):\n",
@@ -657,15 +651,12 @@
     "bal_insert_time_data_for_synthetic = []\n",
     "bal_average_search_time_data_for_synthetic = []\n",
     "bal_worst_search_time_data_for_synthetic = []\n",
-    "bal_space_data_for_synthetic = []\n",
     "for iteration in range(len(data)):\n",
     "    bal_insert_start_time = timeit.default_timer()\n",
     "    bal.insertElement(data[iteration])\n",
     "    bal_insert_end_time = timeit.default_timer()\n",
     "    bal_insert_time = bal_insert_end_time - bal_insert_start_time\n",
     "    bal_insert_time_data_for_synthetic.append(bal_insert_time)\n",
-    "    bal_space = bal.__sizeof__()\n",
-    "    bal_space_data_for_synthetic.append(bal_space)\n",
     "    bal_worst_search_time = 0\n",
     "    bal_tot_search_time = 0\n",
     "    for id in range(iteration + 1):\n",
@@ -685,15 +676,12 @@
     "bf_insert_time_data_for_synthetic = []\n",
     "bf_average_search_time_data_for_synthetic = []\n",
     "bf_worst_search_time_data_for_synthetic = []\n",
-    "bf_space_data_for_synthetic = []\n",
     "for iteration in range(num_data):\n",
     "    bf_insert_start_time = timeit.default_timer()\n",
     "    bf.insertElement(data[iteration])\n",
     "    bf_insert_end_time = timeit.default_timer()\n",
     "    bf_insert_time = bf_insert_end_time - bf_insert_start_time\n",
     "    bf_insert_time_data_for_synthetic.append(bf_insert_time)\n",
-    "    bf_space = bal.__sizeof__()\n",
-    "    bf_space_data_for_synthetic.append(bal_space)\n",
     "    bf_worst_search_time= 0\n",
     "    bf_tot_search_time = 0\n",
     "    for id in range(iteration + 1):\n",
@@ -739,19 +727,15 @@
     "#     print(f\"Sequential Search insert time: {ss_insert_time_data_for_synthetic[num_data_have]:.6f} seconds\")\n",
     "#     print(f\"Sequential Search average search time: {ss_average_search_time_data_for_synthetic[num_data_have]:.6f} seconds\")\n",
     "#     print(f\"Sequential Search worst search time: {ss_worst_search_time_data_for_synthetic[num_data_have]:.6f} seconds\")\n",
-    "#     print(f\"Sequential Search space: {ss_space_data_for_synthetic[num_data_have]} bytes\")\n",
     "#     print(f\"Binary Search Tree insert time: {bst_insert_time_data_for_synthetic[num_data_have]:.6f} seconds\")\n",
     "#     print(f\"Binary Search Tree average search time: {bst_average_search_time_data_for_synthetic[num_data_have]:.6f} seconds\")\n",
     "#     print(f\"Binary Search Tree worst search time: {bst_worst_search_time_data_for_synthetic[num_data_have]:.6f} seconds\")\n",
-    "#     print(f\"Binary Search Tree space: {bst_space_data_for_synthetic[num_data_have]} bytes\")\n",
     "#     print(f\"Balanced Search Tree insert time: {bal_insert_time_data_for_synthetic[num_data_have]:.6f} seconds\")\n",
     "#     print(f\"Balanced Search Tree average search time: {bal_average_search_time_data_for_synthetic[num_data_have]:.6f} seconds\")\n",
     "#     print(f\"Balanced Search Tree worst search time: {bal_worst_search_time_data_for_synthetic[num_data_have]:.6f} seconds\")\n",
-    "#     print(f\"Balanced Search Tree space: {bal_space_data_for_synthetic[num_data_have]} bytes\")\n",
     "#     print(f\"Bloom Filter insert time: {bf_insert_time_data_for_synthetic[num_data_have]:.6f} seconds\")\n",
     "#     print(f\"Bloom Filter average search time: {bf_average_search_time_data_for_synthetic[num_data_have]:.6f} seconds\")\n",
-    "#     print(f\"Bloom Filter worst search time: {bf_worst_search_time_data_for_synthetic[num_data_have]:.6f} seconds\")\n",
-    "#     print(f\"Bloom Filter space: {bf_space_data_for_synthetic[num_data_have]} bytes\")"
+    "#     print(f\"Bloom Filter worst search time: {bf_worst_search_time_data_for_synthetic[num_data_have]:.6f} seconds\")"
    ]
   },
   {
