--- a/SetMembership.ipynb
+++ b/SetMembership.ipynb
@@ -99,14 +99,19 @@
     "        self.color = \"red\"\n",
     "\n",
     "# Helper Function for hashmap\n",
-    "def hashFunction(self, string):\n",
+    "\"\"\"def hashFunction(self, string, hash_count, size):\n",
     "    hash_values = []\n",
     "    hash1 = hash(string)\n",
     "    hash2 = hash(str(hash1) + string)\n",
-    "    for i in range(self.hash_count):\n",
-    "        value = (hash1 + i * hash2) % self.size\n",
+    "    for i in range(hash_count):\n",
+    "        value = (hash1 + i * hash2) % size\n",
     "        hash_values.append(value)\n",
-    "    return hash_values\n",
+    "    return hash_values\"\"\"\n",
+    "def hashFunction(self, string, hash_count, size):\n",
+    "    hash1 = hash(string)\n",
+    "    hash2 = hash(str(hash1) + string)\n",
+    "    value = (hash1 + 0 * hash2) % size\n",
+    "    return value\n",
     "\n",
     "# Helper Function to calculate false postives in bloom filter\n",
     "def falsePositiveRate(self, test_dataset):\n",
@@ -232,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +362,7 @@
     "        inserted = False\n",
     "        # ADD YOUR CODE HERE\n",
     "        for seed in range(self.hash_count):\n",
-    "            result = hashFunction(seed, element) % self.size\n",
+    "            result = hashFunction(seed, element, self.hash_count, self.size) % self.size\n",
     "            self.bit_array[result] = 1\n",
     "        inserted = True\n",
     "        return inserted\n",
@@ -366,7 +371,7 @@
     "        found = True\n",
     "        # ADD YOUR CODE HERE\n",
     "        for seed in range(self.hash_count):\n",
-    "            result = hashFunction(seed, element) % self.size\n",
+    "            result = hashFunction(seed, element, self.hash_count, self.size) % self.size\n",
     "            if self.bit_array[result] == 0:\n",
     "                found = False\n",
     "                break\n",
@@ -382,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -425,36 +430,36 @@
      "output_type": "stream",
      "text": [
       "test1-mobydick.txt\n",
-      "Sequential Search total insert time: 0.000018 seconds\n",
-      "Sequential Search total search time: 0.000556 seconds\n",
-      "Binary Search Tree total insert time: 0.000011 seconds\n",
-      "Binary Search Tree total search time: 0.000009 seconds\n",
-      "Balanced Search Tree total insert time: 0.000010 seconds\n",
-      "Balanced Search Tree total search time: 0.000006 seconds\n",
-      "Bloom Filter total insert time: 0.000010 seconds\n",
-      "Bloom Filter total search time: 0.000006 seconds\n",
+      "Sequential Search total insert time: 0.000014 seconds\n",
+      "Sequential Search total search time: 0.001292 seconds\n",
+      "Binary Search Tree total insert time: 0.000007 seconds\n",
+      "Binary Search Tree total search time: 0.000042 seconds\n",
+      "Balanced Search Tree total insert time: 0.000008 seconds\n",
+      "Balanced Search Tree total search time: 0.000016 seconds\n",
+      "Bloom Filter total insert time: 0.000006 seconds\n",
+      "Bloom Filter total search time: 0.000019 seconds\n",
       "\n",
       "\n",
       "test2-warpeace.txt\n",
-      "Sequential Search total insert time: 0.000013 seconds\n",
-      "Sequential Search total search time: 0.000758 seconds\n",
+      "Sequential Search total insert time: 0.000012 seconds\n",
+      "Sequential Search total search time: 0.000676 seconds\n",
       "Binary Search Tree total insert time: 0.000006 seconds\n",
-      "Binary Search Tree total search time: 0.000011 seconds\n",
-      "Balanced Search Tree total insert time: 0.000006 seconds\n",
+      "Binary Search Tree total search time: 0.000008 seconds\n",
+      "Balanced Search Tree total insert time: 0.000011 seconds\n",
       "Balanced Search Tree total search time: 0.000006 seconds\n",
-      "Bloom Filter total insert time: 0.000005 seconds\n",
-      "Bloom Filter total search time: 0.000005 seconds\n",
+      "Bloom Filter total insert time: 0.000006 seconds\n",
+      "Bloom Filter total search time: 0.000006 seconds\n",
       "\n",
       "\n",
       "test3-dickens.txt\n",
-      "Sequential Search total insert time: 0.000012 seconds\n",
-      "Sequential Search total search time: 0.002888 seconds\n",
-      "Binary Search Tree total insert time: 0.000007 seconds\n",
-      "Binary Search Tree total search time: 0.000010 seconds\n",
-      "Balanced Search Tree total insert time: 0.000006 seconds\n",
-      "Balanced Search Tree total search time: 0.000007 seconds\n",
-      "Bloom Filter total insert time: 0.000006 seconds\n",
-      "Bloom Filter total search time: 0.000006 seconds\n",
+      "Sequential Search total insert time: 0.000032 seconds\n",
+      "Sequential Search total search time: 0.004069 seconds\n",
+      "Binary Search Tree total insert time: 0.000085 seconds\n",
+      "Binary Search Tree total search time: 0.000016 seconds\n",
+      "Balanced Search Tree total insert time: 0.000015 seconds\n",
+      "Balanced Search Tree total search time: 0.000010 seconds\n",
+      "Bloom Filter total insert time: 0.000010 seconds\n",
+      "Bloom Filter total search time: 0.000009 seconds\n",
       "\n",
       "\n"
      ]
@@ -487,7 +492,7 @@
     "file_list = [\"test1-mobydick.txt\",\"test2-warpeace.txt\",\"test3-dickens.txt\"]\n",
     "for file in file_list:\n",
     "    print(file)\n",
-    "    current_file = open(r\"testfiles\\\\\"+file, \"r\", encoding = \"utf-8\")\n",
+    "    current_file = open(r\"testfiles\\\\\" + file, \"r\", encoding = \"utf-8\")\n",
     "    for line in current_file:\n",
     "        for word in line.split(\" \"):\n",
     "            continue\n",
@@ -583,9 +588,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False positives: 0\n"
+     ]
+    }
+   ],
    "source": [
     "import timeit\n",
     "\n",
@@ -700,26 +713,26 @@
     "#-------------------------- Accuracy test for bloom filter-----------------------#\n",
     "\n",
     "# Data for the bloom filter\n",
-    "# BFTest = TestDataGenerator()\n",
-    "# BFdata = BFTest.generateData(1000)\n",
+    "BFTest = TestDataGenerator()\n",
+    "BFdata = BFTest.generateData(1000)\n",
     "\n",
-    "# bf2 = BloomFilterSet()\n",
+    "bf2 = BloomFilterSet()\n",
     "\n",
-    "# # insert 500 integers in the Bloom Filter\n",
-    "# for i in range(500):\n",
-    "#     bf2.insertElement(str(i))\n",
+    "# insert 500 integers in the Bloom Filter\n",
+    "for i in range(500):\n",
+    "    bf2.insertElement(str(i))\n",
     "\n",
-    "# # Test the Bloom Filter with 1000 integers\n",
-    "# false_positives = 0\n",
-    "# for i in range(1000):\n",
-    "#     if i < 500:\n",
-    "#         if not bf.searchElement(str(i)):\n",
-    "#             print(f\"Error: {i} should be a member of the Bloom Filter\")\n",
-    "#     else:\n",
-    "#         if bf.searchElement(str(i)):\n",
-    "#             false_positives += 1\n",
+    "# Test the Bloom Filter with 1000 integers\n",
+    "false_positives = 0\n",
+    "for i in range(1000):\n",
+    "    if i < 500:\n",
+    "        if not bf.searchElement(str(i)):\n",
+    "            pass\n",
+    "    else:\n",
+    "        if bf.searchElement(str(i)):\n",
+    "            false_positives += 1\n",
     "\n",
-    "# print(f\"False positives: {false_positives}\") \n",
+    "print(f\"False positives: {false_positives}\") \n",
     "\n",
     "# Print results\n",
     "# for num_data_have in range(num_data):\n",
